--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
         <div class="row">
             <div class="col-md-12 bg-info">
-                 Ini footer
+                 Ini footer baru
             </div>
         </div>
 
